apps/hass/appdaemon/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appdaemon
  namespace: hass
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: appdaemon
  template:
    metadata:
      labels:
        app: appdaemon
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: appdaemon
        image: acockburn/appdaemon:4.5.13@sha256:cabcb3a4e739db2572ecb8dc3cee685300ab27274efda83a6d8ce4d3988dc647
        ports:
        - containerPort: 5050
          name: http
          protocol: TCP
        volumeMounts:
        - name: appdaemon-data
          mountPath: /conf
          subPath: conf
        - name: appdaemon-data
          mountPath: /.local
          subPath: local
        - name: tmp
          mountPath: /.cache
          subPath: cache
        - name: tmp
          mountPath: /tmp
          subPath: tmp
        resources:
          requests:
            memory: 120Mi
            cpu: 100m
          limits:
            memory: 120Mi
            cpu: 500m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
      volumes:
      - name: appdaemon-data
        persistentVolumeClaim:
          claimName: appdaemon-pvc-local
      - name: tmp
        emptyDir: {}
