apps/hass/appdaemon/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appdaemon
  namespace: hass
  labels:
    app: appdaemon
spec:
  selector:
    app: appdaemon
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
      name: http
  type: ClusterIP
