apps/hass/appdaemon/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: appdaemon
  namespace: hass
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - appdaemon.mgmt.sholdee.net
  rules:
    - backendRefs:
        - name: appdaemon
          namespace: hass
          port: 5050
